--- a/src/server/public/index.html
+++ b/src/server/public/index.html
@@ -6,9 +6,10 @@
     
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css" />
   </head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="/js/index_bundle.js"></script></body>
+  <script type="text/javascript" src="app_bundle.js"></script></body>
 </html>
